ffi/external-direct-optimization/costMatrix.h

/** A three dimesional cost matrix
 *
 * For three way character alignment, this structure holds the cost of
 * transforming the elements of an alphabet.  A cost matrix can only be applied
 * on a particular alphabet.
 */
typedef struct cost_matrices_3d_t {
    size_t alphSize;             /** The number of symbols in the alphabet */
    size_t costMatrixDimension;  /** n in an n x n x n matrix;
                                  *  n is the powerset of the alphabet size (including gap), minus the empty set.
                                  *  or 2 ^ alphSize - 1.
                                  */
    elem_t gap_char;             /** The integer representing a gap character in the alphabet */
    int cost_model_type;         /** The type of cost model to be used in the alignment */
    int include_ambiguities;     /** This is a flag set to true if we are going to accept
                                  *  all possible combinations of the elements in the alphabet
                                  *  in the alignments. This is not true for protein characters
                                  *  for example, where the number of elements of the alphabet
                                  *  is already too big to build all the possible combinations.
                                  */
    cost_t gap_open_cost;        /** The cost of opening a gap. This is only useful in
                                  *  certain cost_model_types.
                                  */
    size_t num_elements;         /** The integer that represents all the combinations, used
                                  *  for ambiguities
                                  */
    cost_t *cost;                /** The transformation cost matrix. The ordering is row-major,
                                  *  and the lookup is a->b, where a is a row label and b is
                                  *  a column label
                                  */
    elem_t *median;              /** The matrix of possible medians between elements in the
                                  *  alphabet. The best possible medians according to the cost
                                  *  matrix.
                                  */
} cost_matrices_3d_t;