lib/tcm/src/Data/TCM/Dense/FFI.hsc


    poke
        ptr
        ( CostMatrix3d
                alphSizeVal
                costMatrixDimensionVal
                gapCharVal
                costModelTypeVal
                include_ambiguitiesVal
                gapOpenVal
                elemsVal
                bestCostVal
                mediansVal
            ) = do
            -- to modify values in the C app
            (# poke struct cost_matrices_3d_t, alphSize) ptr alphSizeVal
            (# poke struct cost_matrices_3d_t, costMatrixDimension) ptr costMatrixDimensionVal
            (# poke struct cost_matrices_3d_t, gap_char) ptr gapCharVal
            (# poke struct cost_matrices_3d_t, cost_model_type) ptr costModelTypeVal
            (# poke struct cost_matrices_3d_t, include_ambiguities) ptr include_ambiguitiesVal
            (# poke struct cost_matrices_3d_t, gap_open_cost) ptr gapOpenVal
            (# poke struct cost_matrices_3d_t, num_elements) ptr elemsVal
            (# poke struct cost_matrices_3d_t, cost) ptr bestCostVal
            (# poke struct cost_matrices_3d_t, median) ptr mediansVal


instance Enum AlignmentStrategy where
    fromEnum Linear = 0
    fromEnum Affine = 3
    fromEnum Other = -1


    toEnum 0 = Linear
    toEnum 3 = Affine
    toEnum _ = Other


{- |
Create and allocate cost matrix first argument, TCM, is only for non-ambiguous
nucleotides, and it used to generate the entire cost matrix, which includes ambiguous elements.
TCM is row-major, with each row being the left character element.
It is therefore indexed not by powers of two, but by cardinal integer.
-}
foreign import ccall unsafe "c_code_alloc_setup.h setUp2dCostMtx"
    setUpCostMatrix2dFn_c
        ∷ Ptr CostMatrix2d
        → Ptr CUInt
        -- ^ Symbol Change Matrix (SDM)
        → CUInt
        -- ^ Gap open cost
        → CSize
        -- ^ Alphabet size/symbol count
        → IO ()


foreign import ccall unsafe "c_code_alloc_setup.h setUp3dCostMtx"
    setUpCostMatrix3dFn_c
        ∷ Ptr CostMatrix3d
        → Ptr CUInt
        -- ^ Symbol Change Matrix (SDM)
        → CUInt
        -- ^ Gap open cost
        → CSize
        -- ^ Alphabet size/symbol count
        → IO ()


-- TODO: Collapse this definition and defer branching to the C side of the FFI call.

{- |
/O(a^5)/ where /a/ is the size of the character alphabet

Generate the 2D and 3D dense TCM matricies used for FFI calls to
'Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.foreignPairwiseDO' and
'Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.foreignThreeWayDO'.

Lookup pairwise and threeway medians and cost with calls to
'lookupPairwise' and 'lookupThreeway'.
-}
generateDenseTransitionCostMatrix
    ∷ Word
    -- ^ The gap open cost. A zero value indicates non-affine alignment context
    → Word
    -- ^ The character alphabet size
    → (Word → Word → Word)
    -- ^ The function defining the cost to transition between two symbols
    → DenseTransitionCostMatrix
generateDenseTransitionCostMatrix affineCost alphabetSize costFunction =
    case affineCost of
        0 → getCostMatrix2dNonAffine alphabetSize costFunction
        _ → getCostMatrix2dAffine affineCost alphabetSize costFunction


{- |
/O(1)/

Lookup the cost and median of /two/ elements.

_NOTE: /Only considers the first 8 bits of the elements!/_
-}
lookupPairwise
    ∷ DenseTransitionCostMatrix
    → SlimState
    → SlimState
    → (SlimState, Word)
lookupPairwise m e1 e2 = unsafePerformIO $ do
    cm2d ← peek $ costMatrix2D m
    let dim = fromEnum $ alphSize cm2d
    let off = (fromEnum e1 `shiftL` dim) + fromEnum e2
    let get = peek . flip advancePtr off
    cost ← get $ bestCost cm2d
    med ← get $ medians cm2d
    pure (med, fromIntegral cost)


{- |
/O(1)/

Lookup the cost and median of /three/ elements.

_NOTE: /Only considers the first 8 bits of the elements!/_
-}
lookupThreeway
    ∷ DenseTransitionCostMatrix
    → SlimState
    → SlimState
    → SlimState
    → (SlimState, Word)
lookupThreeway dtcm e1 e2 e3 = unsafePerformIO $ do
    cm3d ← peek $ costMatrix3D dtcm
    let dim = fromEnum $ alphSize3D cm3d
    let off = (((fromEnum e1 `shiftL` dim) + fromEnum e2) `shiftL` dim) + fromEnum e3
    let get = peek . flip advancePtr off
    med ← get $ medians3D cm3d
    cost ← get $ bestCost3D cm3d
    pure (med, fromIntegral cost)


{- |
/O(1)/

Determine the alignment strategy encoded for the matrix.
-}
getAlignmentStrategy ∷ CostMatrix2d → AlignmentStrategy
getAlignmentStrategy = toEnum . fromEnum . costModelType


{- |
Set up and return a non-affine cost matrix

The cost matrix is allocated strictly.
-}
getCostMatrix2dNonAffine ∷ Word → (Word → Word → Word) → DenseTransitionCostMatrix
getCostMatrix2dNonAffine = performMatrixAllocation 0


{- |
Set up and return a non-affine cost matrix

The cost matrix is allocated strictly.
-}
getCostMatrix2dAffine ∷ Word → Word → (Word → Word → Word) → DenseTransitionCostMatrix
getCostMatrix2dAffine = performMatrixAllocation


{- |
Perform the allocation of the dense TCM
-}
performMatrixAllocation ∷ Word → Word → (Word → Word → Word) → DenseTransitionCostMatrix
performMatrixAllocation openningCost alphabetSize costFn = unsafePerformIO . withArray rowMajorList $
    \allocedTCM → do
        !ptr2D ← malloc ∷ IO (Ptr CostMatrix2d)
        !ptr3D ← malloc ∷ IO (Ptr CostMatrix3d)
        !_ ← setUpCostMatrix2dFn_c ptr2D allocedTCM gapOpen dimension
        !_ ← setUpCostMatrix3dFn_c ptr3D allocedTCM gapOpen dimension
        pure
            DenseTransitionCostMatrix
                { matrixDimension = alphabetSize
                , costMatrix2D = ptr2D
                , costMatrix3D = ptr3D
                }
    where
        dimension = coerceEnum alphabetSize
        gapOpen = coerceEnum openningCost
        range = [0 .. alphabetSize - 1]
        -- This *should* be in row major order due to the manner in which list comprehensions are performed.
        rowMajorList = [coerceEnum $ costFn i j | i ← range, j ← range]


{- |
Coercing one 'Enum' to another through their corresponding 'Int' values.
-}
coerceEnum ∷ (Enum a, Enum b) ⇒ a → b
coerceEnum = toEnum . fromEnum
